# CheckCBox-LLVM-TestHouse

./: .gitignore  CMakeLists.txt  README.md
MicroBenchmarking/AccessingTaintedDataInCheckedRegion/: CMakeLists.txt  access.c  access.h  access.ll  benchmarkO2.c  benchmarkO2.h  tmp.c  tmp.ll
MicroBenchmarking/FlexCExample/: CMakeLists.txt  access.c  access.h  bug.c  bug.h
MicroBenchmarking/HOARD_LIB/: CFIProfiler.cpp  CMakeLists.txt  MemoryProfiler.cpp  MemoryProfiler.h
MicroBenchmarking/HOARD_LIB/Hoard/benchmarks/larson/: larson.cpp
MicroBenchmarking/HOARD_LIB/Hoard/src/: GNUmakefile
MicroBenchmarking/HOARD_LIB/Hoard/src/Heap-Layers/wrappers/: gnuwrapper.cpp  mmapwrapper.h  wrapper.cpp
MicroBenchmarking/HOARD_LIB/Hoard/src/source/: libhoard.cpp
MicroBenchmarking/MemoryAccessTime/: CMakeLists.txt  access.c
MicroBenchmarking/MemoryAccessTime/BenchmarkingCode/: .Tainted.c.swp  Tainted.c  Tainted.wasm
MicroBenchmarking/SandboxCallToReturnTime/: access.c
MicroBenchmarking/SandboxCallToReturnTime/Benchmark/: Tainted.c  Tainted.h  Tainted.ll  Tainted.wasm
example_2/: WorkingWASM.ll  a.out  extrasimpleTainted.c  extrasimpleTainted.ll  reference.ll  simpleTainted.c  simpleTainted.ll  simpleTainted.s
experiment/: simpleTainted.c  simpleTainted.ll  simpleTainted_2.ll
hard/: HardTainted.c  HardTainted.ll
simple/: simpleTainted.c  simpleTainted.ll
